# winter-katas

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
bolt-playground/: BoltPlayground.cpp  CMakeLists.txt  Resources.hpp
bolt-playground/assets/: imgui.ini
bolt-playground/assets/shaders/: bloom.frag  blur.frag  bolt.frag  bolt.geom  bolt.vert  passthrough.vert  shader.frag  shader.geom  shader.vert  simple.frag
of-app/: CMakeLists.txt
of-app/src/: ofApp.cpp
space-wrench/: CMakeLists.txt  Resources.hpp  SpaceWrench.cpp
space-wrench/assets/: shader.frag  wrench.blend  wrench.blend1  wrench.mtl  wrench.stl
videocam-selection/: CMakeLists.txt  VideoCamSelection.cpp
videocam-selection/assets/: imgui.ini
videocam-selection/include/: CiVideoInput.hpp  Ps3EyeVideoInput.hpp  VideoInput.hpp
videocam-selection/src/: CiVideoInput.cpp  Ps3EyeVideoInput.cpp  VideoCamSelection copy.cpp  VideoCamSelection.cpp
